--- a/src/app/modules/tourists/pages/register/register.component.html
+++ b/src/app/modules/tourists/pages/register/register.component.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-12 px-5 py-4">
                 <h2 style="font-size: 50px;" class="card-title text-center mt-3 mb-4">Sign up</h2>
-                <form [formGroup]="detailsForm" (ngSubmit)="submitForm()">
+                <form [formGroup]="detailsForm" (ngSubmit)="submitForm()" autocomplete="off">
                     <div class="card-text">
                         <div class="row">
                             <div class="col-12 col-md-12 mb-2">
