--- a/src/app/shared/components/deal-modal/deal-modal.component.html
+++ b/src/app/shared/components/deal-modal/deal-modal.component.html
@@ -78,9 +78,9 @@
 
       </div>
       <div class="text-center mt-2">
-        <button *ngIf="role !== 'guide'" mdbBtn size="sm" (click)="emitClose()" type="button" class="btn btn-secondary mt-1">Close</button>
-          <button *ngIf="role !== 'guide'" mdbBtn size="sm" (click)="openModal2(dealTour2)" type="button" class="btn btn-cyan mt-1">Book</button>
-          <button  *ngIf="role === 'guide'" mdbBtn size="sm" (click)="emitClose()" type="button" class="btn btn-cyan mt-1">Ok</button>
+        <button *ngIf="userService.getRole() !== 'guide'" mdbBtn size="sm" (click)="emitClose()" type="button" class="btn btn-secondary mt-1">Close</button>
+          <button *ngIf="userService.getRole() !== 'guide'" mdbBtn size="sm" (click)="openModal2(dealTour2)" type="button" class="btn btn-cyan mt-1">Book</button>
+          <button  *ngIf="userService.getRole() === 'guide'" mdbBtn size="sm" (click)="emitClose()" type="button" class="btn btn-cyan mt-1">Ok</button>
       </div>
   </div>
 </div>
@@ -88,7 +88,7 @@
 
 
 
-<div mdbModal #dealTour2="mdbModal" class="modal fade" id="modalLoginAvatar" tabindex="-1" role="dialog" aria-labelledby="mytourLabel2" aria-hidden="true">
+<div style="overflow-y: auto;" mdbModal #dealTour2="mdbModal" class="modal fade" id="modalLoginAvatar" tabindex="-1" role="dialog" aria-labelledby="mytourLabel2" aria-hidden="true">
   <div class="modal-dialog cascading-modal modal-avatar " role="document">
       <div class="modal-content">
           <div class="modal-header">
