--- a/src/app/modules/tourists/components/bookings/bookings.component.html
+++ b/src/app/modules/tourists/components/bookings/bookings.component.html
@@ -46,15 +46,16 @@
       </div>
     </div>
   </div>
-  
+
   <div *ngIf="!bookingsList">
     <div class="row cust-grid">
       <div class="col-12 text-center">
-        <h1>No Bookings !!</h1>
+   <img class="img-fluid my-5 h-50 w-25" src="../../../../../assets/images/cherry-list-is-empty-1.png">
+        <h1 style="font-family: 'Dancing Script', cursive;">No Bookings !!</h1>
       </div>
     </div>
   </div>
-  
+
 
   <div class="d-block d-md-none mt-4">
     <mdb-card class="bag mb-4" *ngFor="let data of bookingsList">
@@ -83,10 +84,10 @@
       </mdb-card-body>
     </mdb-card>
   </div>
-  
+
   </div>
-  
-  
+
+
   <ng-template #content let-c="close" let-d="dismiss">
     <div class="modal-header">
       <h5 class="modal-title" id="modal-basic-title">Tour Details</h5>
