--- a/src/app/modules/tourists/pages/all-bookings/all-bookings.component.html
+++ b/src/app/modules/tourists/pages/all-bookings/all-bookings.component.html
@@ -1,9 +1,10 @@
 <div class="row all">
 
-    <div class="col-12 col-lg-9 p-3" style="position: relative; overflow:hidden;">
+    <div class="col-12 p-3" style="position: relative; overflow:hidden;">
         <div class="container-fluid px-1 px-md-5">
             <div class="card">
                 <div class="row  check pb-0 card-body">
+                    <div class="row col-12 col-lg-9">
                     <div class="col-4 booking">
                         <a [routerLink]="['now']" routerLinkActive="active">
                             <h5>
@@ -21,40 +22,40 @@
                             <h5>
                                 <mdb-icon fas icon="history"></mdb-icon> &nbsp; Previous</h5>
                         </a>
-                    </div>
+                    </div></div>
                 </div>
                 <!-- <hr class="card-body mt-0"> -->
                 <div class="row card-body pt-2">
-                    <div class="col-12 px-1">
+                    <div class="col-12 col-lg-9 px-1">
                         <router-outlet></router-outlet>
                     </div>
+                    <div class="col-3 mt-5 d-none d-lg-block text-center">
+                      <div class="card side-text">
+                          <div class="card-body ">
+                              <div>
+                                  <h5>Bookings with Voila</h5>
+                              </div>
+                              <div>
+                                  <mdb-icon fas icon="check"></mdb-icon> &nbsp;Easy Cancellation</div>
+                              <div>
+                                  <mdb-icon fas icon="check"></mdb-icon>&nbsp; Chat Feature</div>
+                              <div>
+                                  <mdb-icon fas icon="check"></mdb-icon>&nbsp; Save for later</div>
+                              <div>
+                                  <mdb-icon fas icon="check"></mdb-icon>&nbsp; Verified Guides</div>
+                              <div>
+                                  <mdb-icon fas icon="check"></mdb-icon>&nbsp; Personalize Trips</div>
+                              <div>
+                                  <mdb-icon fas icon="check"></mdb-icon>&nbsp; Safe and Secured</div>
 
+                          </div>
+                      </div>
+                  </div>
                 </div>
             </div>
         </div>
     </div>
 
 
-    <div class="col-3 mt-5 d-none d-lg-block text-center">
-        <div class="card side-text">
-            <div class="card-body ">
-                <div>
-                    <h5>Bookings with Voila</h5>
-                </div>
-                <div>
-                    <mdb-icon fas icon="check"></mdb-icon> &nbsp;Easy Cancellation</div>
-                <div>
-                    <mdb-icon fas icon="check"></mdb-icon>&nbsp; Chat Feature</div>
-                <div>
-                    <mdb-icon fas icon="check"></mdb-icon>&nbsp; Save for later</div>
-                <div>
-                    <mdb-icon fas icon="check"></mdb-icon>&nbsp; Verified Guides</div>
-                <div>
-                    <mdb-icon fas icon="check"></mdb-icon>&nbsp; Personalize Trips</div>
-                <div>
-                    <mdb-icon fas icon="check"></mdb-icon>&nbsp; Safe and Secured</div>
 
-            </div>
-        </div>
-    </div>
 </div>
