--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,8 @@
 @import '~mdbootstrap/css/mdb.min.css';
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
+
 // @import "scss/style";
 html,
 body {
@@ -54,12 +56,12 @@ body {
   }
 
   .vertical-center {
-    min-height: 100%; 
+    min-height: 100%;
     min-height: 72vh;
     display: flex;
     width: 100%;
     align-items: center;
-  
+
   }
 
     /* input error */
