--- a/src/app/modules/admin/pages/guide-profile/guide-profile.component.html
+++ b/src/app/modules/admin/pages/guide-profile/guide-profile.component.html
@@ -1,44 +1,56 @@
 <div class="pro-bg">
-    <div class="container pt-5  white-text">
-
+    <div class="white-text">
+     <h1 class="text-center mb-5">Pertional Info.</h1>
 
         <div class="row">
-            <div class="col-4">
-                <img src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" style="width: 280px; height:280px;" class="mx-auto img-fluid rounded-circle">
+            <div class="col-12 col-md-3 mb-3">
+                <img src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" class="mx-auto img-fluid rounded-circle">
             </div>
-            <div class="col-4">
-                <div class="mt-4">
-
-
-                    <div><i class="fas fa-check-circle fa-2x"></i><span style="font-size: 28px;">  {{userData?.name}}</span>
-                        <!-- <div class="py-3">
-                            <span class="pt-2 pr-2" style="font-size: 24px; font-weight: 500;">4.0 </span> <i class="fas fa-star fa-lg"></i>
-                            <i class="fas fa-star fa-lg"></i><i class="fas fa-star fa-lg"></i>
-                            <i class="fas fa-star fa-lg"></i><i class="far fa-star fa-lg"></i>
-                        </div> -->
-                    </div>
-
+            <div class="row col-12 col-md-9">
+            <div class="det col-6">
+              <div class="mb-2"><strong>Name</strong>
+                <div class="float-right">   {{userData?.name}}
                 </div>
             </div>
-            <div class="col-4" style="font-size: 20px;">
-                <!-- <div>
-                    <div><a><i class="fas fa-calendar-check fa-2x"></i> Completed Tours   <span>34</span></a></div>
-                    <div class="py-4"><a><i class="fas fa-business-time fa-2x"></i> Current Bookings     <span>3</span></a></div>
-                </div> -->
+              <div class="mb-2"><strong>Address</strong>
+                  <div class="float-right"> {{userData.address | titlecase}}
+                  </div>
+              </div>
+              <div class="mb-2"><strong>City</strong>
+                  <div class="float-right">{{userData.city | titlecase}}</div>
+              </div>
+              <div class="mb-2"><strong>State</strong>
+                  <div class="float-right">{{userData.state | titlecase}}</div>
+              </div>
+              <div class="mb-2"><strong>Speaks</strong>
+                  <div class="float-right" *ngFor="let item of userData.languages">{{item | titlecase}}</div>
+              </div>
+              <div class="mb-2"><strong>Loves</strong>
+                  <div class="float-right" *ngFor="let item of userData.interests">{{item | titlecase}}</div>
+              </div>
 
+          </div>
+          <div class="det col-6">
+            <div class="mb-2"><strong>Phone</strong>
+              <div class="float-right"> {{userData.phoneNumber}}</div>
+          </div>
+            <div class="mb-2"><strong>Aadhar Number</strong>
+                <div class="float-right">{{userData.aadhaarNumber}}</div>
+            </div>
+            <div class="mb-2"><strong>Nationality</strong>
+                <div class="float-right">India</div>
+            </div>
+            <div class="mb-2"><strong>Date of Birth</strong>
+                <div class="float-right">{{userData.dob | date: 'dd-MM-yyyy'}}</div>
+            </div>
+            <div class="mb-2"><strong>Email ID</strong>
+                <div class="float-right">{{userData.email}}</div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-4">
+            </div>
 
-            </div>
-            <div class="col-4">
-
-            </div>
-            <div class="col-4" style="font-size: 20px;">
-                <div><i class="fas fa-phone-alt fa-2x"></i> {{userData.phoneNumber}}</div>
-            </div>
         </div>
+
     </div>
 </div>
 <div class="my-3 mx-3">
