--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -164,36 +164,5 @@
 
 
 <ng-template #rating let-c1="close" let-d1="dismiss">
-  <div class="modal-header">
-    <h6 class="modal-title" id="modal-basic-title">Rating And Reviews</h6>
-    <button type="button" class="close" aria-label="Close" (click)="d1('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body">
-    <div style="text-align:center">
-      <h5>
-       Rate Now
-      </h5>
-<div class="m-auto" style="align-self: center; justify-content: center; text-align: center;">
-      <fieldset class="rating">
-        <input type="radio" id="star5" name="rating" value="5" /><label class = "full" for="star5" title="Awesome - 5 stars"></label>
-        <input type="radio" id="star4half" name="rating" value="4 and a half" /><label class="half" for="star4half" title="Pretty good - 4.5 stars"></label>
-        <input type="radio" id="star4" name="rating" value="4" /><label class = "full" for="star4" title="Pretty good - 4 stars"></label>
-        <input type="radio" id="star3half" name="rating" value="3 and a half" /><label class="half" for="star3half" title="Meh - 3.5 stars"></label>
-        <input type="radio" id="star3" name="rating" value="3" /><label class = "full" for="star3" title="Meh - 3 stars"></label>
-        <input type="radio" id="star2half" name="rating" value="2 and a half" /><label class="half" for="star2half" title="Kinda bad - 2.5 stars"></label>
-        <input type="radio" id="star2" name="rating" value="2" /><label class = "full" for="star2" title="Kinda bad - 2 stars"></label>
-        <input type="radio" id="star1half" name="rating" value="1 and a half" /><label class="half" for="star1half" title="Meh - 1.5 stars"></label>
-        <input type="radio" id="star1" name="rating" value="1" /><label class = "full" for="star1" title="Sucks big time - 1 star"></label>
-        <input type="radio" id="starhalf" name="rating" value="half" /><label class="half" for="starhalf" title="Sucks big time - 0.5 stars"></label>
-    </fieldset></div>
-    </div>
-    <!-- <br>
-    <p>Reviews</p> -->
-    <textarea class="form-control" [(ngModel)]="reviews" placeholder="write something here!"></textarea>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-outline-dark" (click)="completeTour(rating)">Save</button>
-  </div>
+  <app-rating-modal [bookingId]="this.onGoingEvents[0]?._id" (close)="d1('Cross click')"></app-rating-modal>
 </ng-template>
