--- a/src/app/modules/tourists/components/bookings/bookings.component.html
+++ b/src/app/modules/tourists/components/bookings/bookings.component.html
@@ -173,9 +173,14 @@
              (click)="openCancelRequest(cancel)" mdbWavesEffect>Cancel</button>
         </div>
         <div class="col">
-          <button type="button" mdbBtn color="deep-orange" size="sm" class="btn-block waves-light"
+          <button type="button" mdbBtn color="deep-orange"
+           size="sm" class="btn-block waves-light" *ngIf="selectedBooking.tourType !== 'deal'"
            (click)="contactGuide(content, selectedBooking?.guideId?.email)" mdbWavesEffect>
             Contact&nbsp;<mdb-icon fas icon="headset"></mdb-icon></button>
+            <button type="button" mdbBtn color="deep-orange" *ngIf="selectedBooking.tourType === 'deal'"
+             size="sm" class="btn-block waves-light"
+            (click)="contactTouristRoom(content, selectedBooking.roomDetails._id)" mdbWavesEffect>
+             Contact&nbsp;<mdb-icon fas icon="headset"></mdb-icon></button>
         </div>
         <div class="col">
            <button type="button" mdbBtn color="secondary" size="sm" class="waves-light btn-block"
