--- a/src/app/modules/tourists/components/histories/histories.component.html
+++ b/src/app/modules/tourists/components/histories/histories.component.html
@@ -702,8 +702,12 @@
             <button type="button" mdbBtn color="secondary" size="sm" class="waves-light btn-block" (click)="d('Cross click')" mdbWavesEffect>Close&nbsp;<mdb-icon fas icon="ban"></mdb-icon></button>
          </div>
          <div class="col">
-            <button mdbBtn class="btn-block waves-light" type="button" size="sm" color="pink" mdbWavesEffect>Rate Now</button>
+            <button mdbBtn class="btn-block waves-light" [disabled]="selectedPrevious.rating" (click)="openRating(rating)"
+            type="button" size="sm" color="pink" mdbWavesEffect>Rate Now</button>
         </div>
     </div>
   </ng-template>
 
+  <ng-template #rating let-c1="close" let-d1="dismiss">
+    <app-rating-modal [bookingId]="this.selectedPrevious?._id" (close)="d1('Cross click')"></app-rating-modal>
+  </ng-template>
