--- a/src/app/modules/admin/pages/guide-profile/guide-profile.component.scss
+++ b/src/app/modules/admin/pages/guide-profile/guide-profile.component.scss
@@ -10,3 +10,12 @@
   font-size: 2vh;
 
 }}
+.head{
+  font-size: 5vh;
+  background-color: black;
+  color: white;
+}
+.btn-size{
+  size: 5vh;
+
+}
