--- a/src/app/shared/components/about/about.component.html
+++ b/src/app/shared/components/about/about.component.html
@@ -11,21 +11,21 @@
     </div>
   </div>
 </mdb-card>
-<mdb-card>
+
   <div class="text-center py-5 px-4 my-5">
     <div>
       <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>Meet Your developers</strong></h2>
-      <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>Team Decoits 3.0</strong></h2>
+      <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>The Decoits 3.0</strong></h2>
       <p class="mx-5 mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam,
         voluptatem,
         optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos. Odit sed qui,
         dolorum!
       </p>
-
+ </div>
     </div>
     <div class="row">
       <div class="col-12 col-lg-6 row mb-5 mt-4">
-    <img class="img-fluid col-4" src="../../../../assets/images/Ekta.jpeg" style="border-radius: 50%;">
+    <img class="img-fluid pp col-4" src="../../../../assets/images/Ekta.jpeg" style="border-radius: 50%;">
     <div class="col-8 row decoids">
       <h2 class=" col-12"><p>Ekta Garg</p></h2>
       <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;happyekta99@gmail.com</p></div>
@@ -34,7 +34,7 @@
     </div>
   </div>
   <div class="col-12 col-lg-6  row mb-5 mt-4">
-    <img class="img-fluid col-4" src="../../../../assets/images/rajat.jpg" style="border-radius: 50%;">
+    <img class="img-fluid pp col-4" src="../../../../assets/images/rajat.jpg" style="border-radius: 50%;">
     <div class="col-8 row decoids">
       <h2 class=" col-12"><p>Rajat Sharma</p></h2>
       <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;rajatsharmaatri@gmail.com</p></div>
@@ -43,16 +43,16 @@
     </div>
   </div>
   <div class="col-12 col-lg-6  row mb-5 mt-4">
-    <img class="img-fluid col-4" src="../../../../assets/images/Ekta.jpeg" style="border-radius: 50%;">
+    <img class="img-fluid pp col-4" src="../../../../assets/images/venu.jpeg" style="border-radius: 50%;">
     <div class="col-8 row decoids">
       <h2 class=" col-12"><p>VenuGopal</p></h2>
       <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;venugopalsinghal@gmail.com</p></div>
       <div class="col-6"><p><i class="fab fa-instagram"></i>&nbsp;&nbsp;venugopalsinghal</p></div>
-      <div class="col-6"><p><i class="fab fa-github"></i>&nbsp;&nbsp;pta ni</p></div>
+      <div class="col-6"><p><i class="fab fa-github"></i>&nbsp;venugopalsinghal</p></div>
     </div>
   </div>
   <div class="col-12 col-lg-6 row mb-5 mt-4">
-    <img class="img-fluid col-4" src="../../../../assets/images/Shobhit.jpeg" style="border-radius: 50%;">
+    <img class="img-fluid pp col-4" src="../../../../assets/images/Shobhit.jpeg" style="border-radius: 50%;">
     <div class="col-8 row decoids">
       <h2 class=" col-12"><p>Shobit Jain</p></h2>
       <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;jainshobit0@gmail.com</p></div>
@@ -61,7 +61,7 @@
     </div>
   </div>
   <div class="col-12 col-lg-6 row mb-5 mt-4">
-    <img class="img-fluid col-4" src="../../../../assets/images/vidhi.JPG" style="border-radius: 50%;">
+    <img class="img-fluid pp col-4" src="../../../../assets/images/vidhi.JPG" style="border-radius: 50%;">
     <div class="col-8 row decoids">
       <h2 class=" col-12"><p>Vidhi Agrawal</p></h2>
       <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;vidhiagrawal305@gmail.com</p></div>
@@ -70,7 +70,7 @@
     </div>
   </div>
    <div class="col-12 col-lg-6 row mb-5 mt-4">
-    <img class="img-fluid col-4" src="../../../../assets/images/archit.JPG" style="border-radius: 50%;">
+    <img class="img-fluid pp col-4" src="../../../../assets/images/archit.JPG" style="border-radius: 50%;">
     <div class="col-8 row decoids">
       <h2 class=" col-12"><p>Archit jain</p></h2>
       <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;architjain808@gmail.com</p></div>
@@ -79,5 +79,4 @@
     </div>
   </div>
 </div>
-  </div>
-</mdb-card>
+
