--- a/src/styles.scss
+++ b/src/styles.scss
@@ -259,3 +259,10 @@ body {
 .activeClass {
   background-color: black;
 }
+
+.bottomFix {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+}
