--- a/src/app/shared/components/chat-room/chat-room.component.scss
+++ b/src/app/shared/components/chat-room/chat-room.component.scss
@@ -40,7 +40,7 @@
   .message-wrapper {
     position: relative;
     margin-top: 10px;
-    z-index: 1000 !important;
+    z-index: 700 !important;
   }
   .chat-bubble {
     border-radius: 10px;
@@ -136,8 +136,8 @@
 
   .rowDiv {
     background: #ffffff !important;
-    height: 50vh !important;
-    max-height: 51vh !important;
+    height: 70vh !important;
+    max-height: 75vh !important;
     overflow-y: auto !important;
     top: 0px;
     // margin-top: -20px !important;
@@ -228,11 +228,11 @@
 //   margin: 0;
 //   padding: 0;
 // }
-.sendbox{
-  display: flex;
-flex-direction: column;
-}
-.sendbox1{
-  margin-top: auto;
+// .sendbox{
+//   display: flex;
+// flex-direction: column;
+// }
+// .sendbox1{
+//   margin-top: auto;
 
-}
+// }
