--- a/src/app/modules/tourists/pages/all-bookings/all-bookings.component.html
+++ b/src/app/modules/tourists/pages/all-bookings/all-bookings.component.html
@@ -2,55 +2,56 @@
 
     <div class="col-12 p-3" style="position: relative; overflow:hidden;">
         <div class="container-fluid px-1 px-md-5">
-            <div class="card">
+            <div class="card" style="background: linear-gradient(180deg, rgba(255,255,255,0.9671218829328606) 25%, rgba(221,213,226,1) 75%, rgba(202,194,207,1) 99%);">
                 <div class="row  check pb-0 card-body">
                     <div class="row col-12 col-lg-9">
-                    <div class="col-4 booking">
-                        <a [routerLink]="['now']" routerLinkActive="active">
-                            <h5>
-                                <mdb-icon far icon="calendar-alt"></mdb-icon> &nbsp; Bookings</h5>
-                        </a>
+                        <div class="col-4 booking">
+                            <a [routerLink]="['now']" routerLinkActive="active">
+                                <h5>
+                                    <mdb-icon far icon="calendar-alt"></mdb-icon> &nbsp; Bookings</h5>
+                            </a>
+                        </div>
+                        <div class="col-4 request">
+                            <a [routerLink]="['requests']" routerLinkActive="active">
+                                <h5>
+                                    <mdb-icon far icon="address-card"></mdb-icon> &nbsp; Requested</h5>
+                            </a>
+                        </div>
+                        <div class="col-4 history">
+                            <a [routerLink]="['histories']" routerLinkActive="active">
+                                <h5>
+                                    <mdb-icon fas icon="history"></mdb-icon> &nbsp; Previous</h5>
+                            </a>
+                        </div>
                     </div>
-                    <div class="col-4 request">
-                        <a [routerLink]="['requests']" routerLinkActive="active">
-                            <h5>
-                                <mdb-icon far icon="address-card"></mdb-icon> &nbsp; Requested</h5>
-                        </a>
-                    </div>
-                    <div class="col-4 history">
-                        <a [routerLink]="['histories']" routerLinkActive="active">
-                            <h5>
-                                <mdb-icon fas icon="history"></mdb-icon> &nbsp; Previous</h5>
-                        </a>
-                    </div></div>
                 </div>
                 <!-- <hr class="card-body mt-0"> -->
                 <div class="row card-body pt-2">
                     <div class="col-12 col-lg-9 px-1">
                         <router-outlet></router-outlet>
                     </div>
-                    <div class="col-3 mt-5 d-none d-lg-block text-center">
-                      <div class="card side-text">
-                          <div class="card-body ">
-                              <div>
-                                  <h5>Bookings with Voila</h5>
-                              </div>
-                              <div>
-                                  <mdb-icon fas icon="check"></mdb-icon> &nbsp;Easy Cancellation</div>
-                              <div>
-                                  <mdb-icon fas icon="check"></mdb-icon>&nbsp; Chat Feature</div>
-                              <div>
-                                  <mdb-icon fas icon="check"></mdb-icon>&nbsp; Save for later</div>
-                              <div>
-                                  <mdb-icon fas icon="check"></mdb-icon>&nbsp; Verified Guides</div>
-                              <div>
-                                  <mdb-icon fas icon="check"></mdb-icon>&nbsp; Personalize Trips</div>
-                              <div>
-                                  <mdb-icon fas icon="check"></mdb-icon>&nbsp; Safe and Secured</div>
+                    <div class="col-3 mt-5 d-none d-lg-block ">
+                        <div class="card side-text">
+                            <div class="card-body">
+                                <div>
+                                    <h5>Bookings with Voila</h5>
+                                </div>
+                                <div>
+                                    <mdb-icon fas icon="check"></mdb-icon> &nbsp;Easy Cancellation</div>
+                                <div>
+                                    <mdb-icon fas icon="check"></mdb-icon>&nbsp; Chat Feature</div>
+                                <div>
+                                    <mdb-icon fas icon="check"></mdb-icon>&nbsp; Save for later</div>
+                                <div>
+                                    <mdb-icon fas icon="check"></mdb-icon>&nbsp; Verified Guides</div>
+                                <div>
+                                    <mdb-icon fas icon="check"></mdb-icon>&nbsp; Personalize Trips</div>
+                                <div>
+                                    <mdb-icon fas icon="check"></mdb-icon>&nbsp; Safe and Secured</div>
 
-                          </div>
-                      </div>
-                  </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
