--- a/src/app/modules/tourists/pages/all-bookings/all-bookings.component.scss
+++ b/src/app/modules/tourists/pages/all-bookings/all-bookings.component.scss
@@ -3,15 +3,15 @@
 }
 
 .booking a:hover {
-    text-shadow: 0px 0px 6px rgba(233, 30, 99, 0.7);
+    text-shadow: 0px 0px 6px rgba(248, 113, 158, 0.7);
 }
 
 .request a {
-    color: rgba(0, 188, 212, 0.7);
+    color: #7fd32b;
 }
 
 .request a:hover {
-    text-shadow: 0px 0px 6px rgba(0, 188, 212, 0.7);
+    text-shadow: 0px 0px 6px #a4e95e;
 }
 
 .history a {
@@ -19,7 +19,7 @@
 }
 
 .history a:hover {
-    text-shadow: 0px 0px 6px rgba(255, 152, 0, 0.7);
+    text-shadow: 0px 0px 6px rgba(255, 171, 45, 0.7);
 }
 
 .side-text mdb-icon {
@@ -27,7 +27,7 @@
 }
 
 .side-text {
-    background-image: linear-gradient(56deg, rgba(254, 254, 254, 0.05) 0%, rgba(254, 254, 254, 0.05) 69%, rgba(160, 160, 160, 0.05) 69%, rgba(160, 160, 160, 0.05) 100%), linear-gradient(194deg, rgba(102, 102, 102, 0.02) 0%, rgba(102, 102, 102, 0.02) 60%, rgba(67, 67, 67, 0.02) 60%, rgba(67, 67, 67, 0.02) 100%), linear-gradient(76deg, rgba(169, 169, 169, 0.06) 0%, rgba(169, 169, 169, 0.06) 89%, rgba(189, 189, 189, 0.06) 89%, rgba(189, 189, 189, 0.06) 100%), linear-gradient(326deg, rgba(213, 213, 213, 0.04) 0%, rgba(213, 213, 213, 0.04) 45%, rgba(66, 66, 66, 0.04) 45%, rgba(66, 66, 66, 0.04) 100%), linear-gradient(183deg, rgba(223, 223, 223, 0.01) 0%, rgba(223, 223, 223, 0.01) 82%, rgba(28, 28, 28, 0.01) 82%, rgba(28, 28, 28, 0.01) 100%), linear-gradient(3deg, rgba(20, 20, 20, 0.06) 0%, rgba(20, 20, 20, 0.06) 62%, rgba(136, 136, 136, 0.06) 62%, rgba(136, 136, 136, 0.06) 100%), linear-gradient(200deg, rgba(206, 206, 206, 0.09) 0%, rgba(206, 206, 206, 0.09) 58%, rgba(6, 6, 6, 0.09) 58%, rgba(6, 6, 6, 0.09) 100%), linear-gradient(304deg, rgba(162, 162, 162, 0.07) 0%, rgba(162, 162, 162, 0.07) 27%, rgba(24, 24, 24, 0.07) 27%, rgba(24, 24, 24, 0.07) 100%), linear-gradient(186deg, rgba(166, 166, 166, 0.04) 0%, rgba(166, 166, 166, 0.04) 5%, rgba(210, 210, 210, 0.04) 5%, rgba(210, 210, 210, 0.04) 100%), linear-gradient(90deg, rgb(26, 118, 64), rgb(32, 207, 121), rgb(78, 196, 128));
+    background-image: linear-gradient(56deg, rgba(254, 254, 254, 0.05) 0%, rgba(254, 254, 254, 0.05) 69%, rgba(160, 160, 160, 0.05) 69%, rgba(160, 160, 160, 0.05) 100%), linear-gradient(194deg, rgba(102, 102, 102, 0.02) 0%, rgba(102, 102, 102, 0.02) 60%, rgba(67, 67, 67, 0.02) 60%, rgba(67, 67, 67, 0.02) 100%), linear-gradient(76deg, rgba(169, 169, 169, 0.06) 0%, rgba(169, 169, 169, 0.06) 89%, rgba(189, 189, 189, 0.06) 89%, rgba(189, 189, 189, 0.06) 100%), linear-gradient(326deg, rgba(213, 213, 213, 0.04) 0%, rgba(213, 213, 213, 0.04) 45%, rgba(66, 66, 66, 0.04) 45%, rgba(66, 66, 66, 0.04) 100%), linear-gradient(183deg, rgba(223, 223, 223, 0.01) 0%, rgba(223, 223, 223, 0.01) 82%, rgba(28, 28, 28, 0.01) 82%, rgba(28, 28, 28, 0.01) 100%), linear-gradient(3deg, rgba(20, 20, 20, 0.06) 0%, rgba(20, 20, 20, 0.06) 62%, rgba(136, 136, 136, 0.06) 62%, rgba(136, 136, 136, 0.06) 100%), linear-gradient(200deg, rgba(206, 206, 206, 0.09) 0%, rgba(206, 206, 206, 0.09) 58%, rgba(6, 6, 6, 0.09) 58%, rgba(6, 6, 6, 0.09) 100%), linear-gradient(304deg, rgba(162, 162, 162, 0.07) 0%, rgba(162, 162, 162, 0.07) 27%, rgba(24, 24, 24, 0.07) 27%, rgba(24, 24, 24, 0.07) 100%), linear-gradient(186deg, rgba(166, 166, 166, 0.04) 0%, rgba(166, 166, 166, 0.04) 5%, rgba(210, 210, 210, 0.04) 5%, rgba(210, 210, 210, 0.04) 100%), linear-gradient(90deg, rgb(85, 61, 103), rgb(122, 89, 144), rgb(156, 127, 172));
     color: white;
     font-weight: bolder;
     // position: -webkit-sticky; /* Safari */
@@ -47,23 +47,25 @@
     font-size: 20px;
     text-shadow: 0px 0px 11px white;
 }
-@media(max-width:600px){
-  .check h5{
-    font-size: 15px !important;
-  }
+
+@media(max-width:600px) {
+    .check h5 {
+        font-size: 15px !important;
+    }
 }
-@media(max-width:450px){
-  .check h5{
-    font-size: 13px !important;
-  }
+
+@media(max-width:450px) {
+    .check h5 {
+        font-size: 13px !important;
+    }
 }
-@media(max-width:350px){
-  .check h5{
-    font-size: 10px !important;
-  }
+
+@media(max-width:350px) {
+    .check h5 {
+        font-size: 10px !important;
+    }
 }
 
 .col-4 {
-  padding: 8px;
+    padding: 8px;
 }
-
